<resources>
    <string name="app_name">HuecosColombia</string>
    <string name="title_activity_maps">Map</string>
    <string name="email_hint">Correo electrónico</string>
    <string name="password_hint">Contraseña</string>
    <string name="signup_text">Registrarse</string>
    <string name="login_text">Ingresar</string>
    <string name="repassword_hint">Confirmar contraseña</string>
    <string name="name_hint">Nombre</string>
    <string name="user_hint">Usuario</string>
    <string name="my_photos">Mis Fotos</string>
    <string name="messages">Mensajes</string>
    <string name="edit_profile">Editar Perfil</string>
    <string name="new_password">Nueva Contraseña</string>
    <string name="save">Guardar</string>
    <string name="direction">Dirección</string>
    <string name="description">Descripción</string>
    <string name="publish">Publicar</string>
    <string name="info">Huecos Colombia es una aplicacion que te permitira
                        tomar fotos de los huecos que hay en tu ciudad y
                        enviarsela a un funcionario publico para que tome
                        las acciones necesarias.
                        Disfruta la app.</string>
    <string name="in_process">En proceso</string>
    <string name="delete">Eliminar</string>
    <string name="pending">Pendiente</string>
    <string name="solve">Resuelto</string>
    <string name="since">Desde</string>
    <string name="until">Hasta</string>
    <string name="search">Buscar</string>
    <string name="users">Usuarios</string>
    <string name="all">Todos</string>
    <string name="to_finish">Terminar</string>
    <string name="done">Hecho</string>
    <string name="publications">Publicaciones</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
