<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/name_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/signup_name_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/user_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/signup_user_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/signup_email_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/signup_password_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/repassword_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/signup_repassword_et"
            android:textColorHint="#757575"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signup_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_edge_button"
                android:textSize="25sp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/signup_signup_btn"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>