<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_login">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/edit_profile_admin_back_btn"
            android:background="@drawable/back_arrow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorAccent" />
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:textColor="#000"
            android:hint="@string/name_hint"
            android:padding="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="70dp"
            android:id="@+id/edit_profile_admin_name_et"
            android:textColorHint="#757575"
            android:enabled="false"
            android:layout_marginBottom="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:textColor="#000"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_admin_email_et"
            android:textColorHint="#757575"
            android:enabled="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:textColor="#000"
            android:hint="@string/new_password"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_admin_new_password_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:textColor="#000"
            android:hint="@string/repassword_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_admin_confirm_password_et"
            android:textColorHint="#757575"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_profile_admin_save_btn"
            android:text="@string/save"
            android:background="@drawable/round_edge_button"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"/>
    </LinearLayout>
</RelativeLayout>
