<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbarAlwaysDrawVerticalTrack="true">
    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">
        <ImageButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/edit_profile_back_btn"
            android:background="@drawable/back_arrow"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textColor="@color/colorAccent" />
    </Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="@drawable/background_login">
        <RelativeLayout
            android:layout_width="160dp"
            android:layout_height="160dp">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="5dp"/>
            <ImageButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="5dp"
                android:background="@drawable/edit"/>
        </RelativeLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/name_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_name_et"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/email_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_email"
            android:textColorHint="#757575"/>
        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:paddingLeft="15dp"
            android:layout_marginTop="10dp"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/password_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_password"
            android:textColorHint="#757575"
            android:enabled="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/new_password"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_new_password"
            android:textColorHint="#757575"
            android:enabled="false"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:background="@drawable/round_edge"
            android:hint="@string/repassword_hint"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:id="@+id/edit_profile_confirm_password"
            android:textColorHint="#757575"
            android:enabled="false"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/edit_profile_save_btn"
            android:text="@string/save"
            android:background="@drawable/round_edge_button"
            android:textColor="@color/colorPrimary"
            android:textSize="25sp"
            android:padding="10dp"/>
    </LinearLayout>
</RelativeLayout>