<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:id="@+id/fr_list_admin_todo_cb"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_process"
                android:layout_marginRight="10dp"
                android:textSize="18sp"
                android:id="@+id/fr_list_admin_inprocess_cb"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solve"
                android:textSize="18sp"
                android:layout_marginRight="10dp"
                android:id="@+id/fr_list_admin_done_cb"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/since"
                android:textSize="25sp"/>
            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/arrow_right"
                android:layout_gravity="bottom"
                android:layout_marginRight="50dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/until"
                android:textSize="25sp"/>
            <ImageButton
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/arrow_right"
                android:layout_gravity="bottom"/>
        </LinearLayout>
        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fr_list_admin_list_lv"/>
    </LinearLayout>
</RelativeLayout>