<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="@string/users"
            android:textColor="@color/colorAccent"
            android:textAlignment="center"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pending"
                android:layout_marginRight="10dp"
                android:textSize="18sp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/in_process"
                android:layout_marginRight="10dp"
                android:textSize="18sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/solve"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all"
                android:textSize="18sp"
                android:layout_marginRight="10dp"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="75dp"
        android:layout_marginTop="200dp"
        android:background="#fffde7">
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="75dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/colorPrimary">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:layout_marginLeft="70dp"
            android:layout_marginRight="75dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:id="@+id/fr_message_admin_message_et"
            />
    </LinearLayout>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/fr_message_admin_emoticon_btn"
        android:background="@drawable/emoticon"/>
    <ImageButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/fr_message_admin_send_btn"
        android:background="@drawable/send_message"/>
</RelativeLayout>