<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:id="@+id/fr_profile_picture_img"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:layout_marginTop="20dp"
            android:id="@+id/fr_profile_name_tv"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_photos"
                android:id="@+id/fr_profile_photos_btn"
                android:background="@drawable/circle_button"
                android:layout_marginRight="20dp"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messages"
                android:id="@+id/fr_profile_messages_btn"
                android:background="@drawable/circle_button"/>
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"
            android:id="@+id/fr_profile_edit_profile_btn"
            android:background="@drawable/circle_button"/>
    </LinearLayout>
</RelativeLayout>