<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/background_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerVertical="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/title"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_email_et"
            android:hint="@string/email_hint"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_edge"
            android:textColor="#000"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColorHint="#757575"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/login_password_et"
            android:hint="@string/password_hint"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/round_edge"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="#000"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:textColorHint="#757575"
            android:inputType="textPassword"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_text"
            android:textAlignment="textEnd"
            android:layout_marginRight="15dp"
            android:textSize="25sp"
            android:id="@+id/login_register_tv"
            android:layout_marginBottom="15dp"
            android:textColor="#FFF" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_text"
                android:layout_centerHorizontal="true"
                android:background="@drawable/round_edge_button"
                android:textSize="25sp"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/colorPrimary"
                android:id="@+id/login_login_btn"/>
            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/login_login_btn"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>