<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="210dp"
            android:layout_height="210dp"
            android:layout_marginBottom="5dp">
            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="5dp"
                android:background="@drawable/round_edge"
                android:id="@+id/publish_photo_picture_img"/>
            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:background="@drawable/error"
                android:layout_marginRight="5dp"
                android:id="@+id/publish_photo_cancel_btn"/>
        </RelativeLayout>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edge"
            android:textSize="25sp"
            android:padding="10dp"
            android:layout_margin="15dp"
            android:hint="@string/direction"
            android:textColor="#000"
            android:textColorHint="#757575"
            android:id="@+id/publish_photo_direction_et"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/description"
            android:layout_margin="15dp"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@drawable/round_edge"
            android:textSize="25sp"
            android:padding="10dp"
            android:textColor="#000"
            android:layout_margin="15dp"
            android:hint="@string/description"
            android:textColorHint="#757575"
            android:inputType="text|textMultiLine"
            android:gravity="top"
            android:id="@+id/publish_photo_description_et"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/round_edge_button"
            android:text="@string/publish"
            android:textSize="25sp"
            android:textColor="@color/colorPrimary"
            android:padding="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/publish_photo_publish_btn"/>
    </LinearLayout>
    <ImageButton
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/back_arrow"
        android:layout_margin="10dp"
        android:id="@+id/publish_photo_back_btn"/>
    </RelativeLayout>
</ScrollView>
